seaqt/QtWidgets/gen_qgesture.h

typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPinchGesture QPinchGesture;
typedef struct QPointF QPointF;
typedef struct QSwipeGesture QSwipeGesture;
typedef struct QTapGesture QTapGesture;
typedef struct QTimerEvent QTimerEvent;
typedef struct VirtualQPinchGesture VirtualQPinchGesture;
typedef struct QPinchGesture_VTable{
	void (*destructor)(VirtualQPinchGesture* self);
	QMetaObject* (*metaObject)(const VirtualQPinchGesture* self);
	void* (*metacast)(VirtualQPinchGesture* self, const char* param1);
	int (*metacall)(VirtualQPinchGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQPinchGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQPinchGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQPinchGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQPinchGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQPinchGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQPinchGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQPinchGesture* self, QMetaMethod* signal);
}QPinchGesture_VTable;
VirtualQPinchGesture* QPinchGesture_new(const QPinchGesture_VTable* vtbl, size_t vdata);
VirtualQPinchGesture* QPinchGesture_new2(const QPinchGesture_VTable* vtbl, size_t vdata, QObject* parent);
void QPinchGesture_setRotationAngle(QPinchGesture* self, double value);
struct miqt_string QPinchGesture_tr2(const char* s, const char* c);
struct miqt_string QPinchGesture_tr3(const char* s, const char* c, int n);
QMetaObject* QPinchGesture_virtualbase_metaObject(const VirtualQPinchGesture* self);
void* QPinchGesture_virtualbase_metacast(VirtualQPinchGesture* self, const char* param1);
int QPinchGesture_virtualbase_metacall(VirtualQPinchGesture* self, int param1, int param2, void** param3);
bool QPinchGesture_virtualbase_event(VirtualQPinchGesture* self, QEvent* event);
bool QPinchGesture_virtualbase_eventFilter(VirtualQPinchGesture* self, QObject* watched, QEvent* event);
void QPinchGesture_virtualbase_timerEvent(VirtualQPinchGesture* self, QTimerEvent* event);
void QPinchGesture_virtualbase_childEvent(VirtualQPinchGesture* self, QChildEvent* event);
void QPinchGesture_virtualbase_customEvent(VirtualQPinchGesture* self, QEvent* event);
void QPinchGesture_virtualbase_connectNotify(VirtualQPinchGesture* self, QMetaMethod* signal);
void QPinchGesture_virtualbase_disconnectNotify(VirtualQPinchGesture* self, QMetaMethod* signal);
QObject* QPinchGesture_protectedbase_sender(const VirtualQPinchGesture* self);
int QPinchGesture_protectedbase_senderSignalIndex(const VirtualQPinchGesture* self);
int QPinchGesture_protectedbase_receivers(const VirtualQPinchGesture* self, const char* signal);
bool QPinchGesture_protectedbase_isSignalConnected(const VirtualQPinchGesture* self, QMetaMethod* signal);
const QMetaObject* QPinchGesture_staticMetaObject();
typedef struct VirtualQSwipeGesture VirtualQSwipeGesture;
typedef struct QSwipeGesture_VTable{
	void (*destructor)(VirtualQSwipeGesture* self);
	QMetaObject* (*metaObject)(const VirtualQSwipeGesture* self);
	void* (*metacast)(VirtualQSwipeGesture* self, const char* param1);
	int (*metacall)(VirtualQSwipeGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQSwipeGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQSwipeGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQSwipeGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQSwipeGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQSwipeGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQSwipeGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQSwipeGesture* self, QMetaMethod* signal);
}QSwipeGesture_VTable;
VirtualQSwipeGesture* QSwipeGesture_new(const QSwipeGesture_VTable* vtbl, size_t vdata);
VirtualQSwipeGesture* QSwipeGesture_new2(const QSwipeGesture_VTable* vtbl, size_t vdata, QObject* parent);
QMetaObject* QSwipeGesture_metaObject(const QSwipeGesture* self);
void* QSwipeGesture_metacast(QSwipeGesture* self, const char* param1);
int QSwipeGesture_metacall(QSwipeGesture* self, int param1, int param2, void** param3);
struct miqt_string QSwipeGesture_tr(const char* s);
int QSwipeGesture_horizontalDirection(const QSwipeGesture* self);
int QSwipeGesture_verticalDirection(const QSwipeGesture* self);
double QSwipeGesture_swipeAngle(const QSwipeGesture* self);
void QSwipeGesture_setSwipeAngle(QSwipeGesture* self, double value);
struct miqt_string QSwipeGesture_tr2(const char* s, const char* c);
struct miqt_string QSwipeGesture_tr3(const char* s, const char* c, int n);
QMetaObject* QSwipeGesture_virtualbase_metaObject(const VirtualQSwipeGesture* self);
void* QSwipeGesture_virtualbase_metacast(VirtualQSwipeGesture* self, const char* param1);
int QSwipeGesture_virtualbase_metacall(VirtualQSwipeGesture* self, int param1, int param2, void** param3);
bool QSwipeGesture_virtualbase_event(VirtualQSwipeGesture* self, QEvent* event);
bool QSwipeGesture_virtualbase_eventFilter(VirtualQSwipeGesture* self, QObject* watched, QEvent* event);
void QSwipeGesture_virtualbase_timerEvent(VirtualQSwipeGesture* self, QTimerEvent* event);
void QSwipeGesture_virtualbase_childEvent(VirtualQSwipeGesture* self, QChildEvent* event);
void QSwipeGesture_virtualbase_customEvent(VirtualQSwipeGesture* self, QEvent* event);
void QSwipeGesture_virtualbase_connectNotify(VirtualQSwipeGesture* self, QMetaMethod* signal);
void QSwipeGesture_virtualbase_disconnectNotify(VirtualQSwipeGesture* self, QMetaMethod* signal);
QObject* QSwipeGesture_protectedbase_sender(const VirtualQSwipeGesture* self);
int QSwipeGesture_protectedbase_senderSignalIndex(const VirtualQSwipeGesture* self);
int QSwipeGesture_protectedbase_receivers(const VirtualQSwipeGesture* self, const char* signal);
bool QSwipeGesture_protectedbase_isSignalConnected(const VirtualQSwipeGesture* self, QMetaMethod* signal);
const QMetaObject* QSwipeGesture_staticMetaObject();
typedef struct VirtualQTapGesture VirtualQTapGesture;
typedef struct QTapGesture_VTable{
	void (*destructor)(VirtualQTapGesture* self);
	QMetaObject* (*metaObject)(const VirtualQTapGesture* self);
	void* (*metacast)(VirtualQTapGesture* self, const char* param1);
	int (*metacall)(VirtualQTapGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQTapGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQTapGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQTapGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQTapGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQTapGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQTapGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTapGesture* self, QMetaMethod* signal);
}QTapGesture_VTable;
VirtualQTapGesture* QTapGesture_new(const QTapGesture_VTable* vtbl, size_t vdata);
QMetaObject* QTapGesture_metaObject(const QTapGesture* self);
void* QTapGesture_metacast(QTapGesture* self, const char* param1);
int QTapGesture_metacall(QTapGesture* self, int param1, int param2, void** param3);
struct miqt_string QTapGesture_tr(const char* s);
QPointF* QTapGesture_position(const QTapGesture* self);
void QTapGesture_setPosition(QTapGesture* self, QPointF* pos);
struct miqt_string QTapGesture_tr2(const char* s, const char* c);
struct miqt_string QTapGesture_tr3(const char* s, const char* c, int n);
QMetaObject* QTapGesture_virtualbase_metaObject(const VirtualQTapGesture* self);
void* QTapGesture_virtualbase_metacast(VirtualQTapGesture* self, const char* param1);
int QTapGesture_virtualbase_metacall(VirtualQTapGesture* self, int param1, int param2, void** param3);
bool QTapGesture_virtualbase_event(VirtualQTapGesture* self, QEvent* event);
bool QTapGesture_virtualbase_eventFilter(VirtualQTapGesture* self, QObject* watched, QEvent* event);
void QTapGesture_virtualbase_timerEvent(VirtualQTapGesture* self, QTimerEvent* event);
void QTapGesture_virtualbase_childEvent(VirtualQTapGesture* self, QChildEvent* event);
void QTapGesture_virtualbase_customEvent(VirtualQTapGesture* self, QEvent* event);
void QTapGesture_virtualbase_connectNotify(VirtualQTapGesture* self, QMetaMethod* signal);
void QTapGesture_virtualbase_disconnectNotify(VirtualQTapGesture* self, QMetaMethod* signal);
QObject* QTapGesture_protectedbase_sender(const VirtualQTapGesture* self);
int QTapGesture_protectedbase_senderSignalIndex(const VirtualQTapGesture* self);
int QTapGesture_protectedbase_receivers(const VirtualQTapGesture* self, const char* signal);
bool QTapGesture_protectedbase_isSignalConnected(const VirtualQTapGesture* self, QMetaMethod* signal);