seaqt/QtWidgets/gen_qgesture.nim

proc fcQPinchGesture_setRotationAngle(self: pointer, value: float64): void {.importc: "QPinchGesture_setRotationAngle".}
proc fcQPinchGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QPinchGesture_tr2".}
proc fcQPinchGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPinchGesture_tr3".}
type cQPinchGestureVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQPinchGestureVTable, self: ptr cQPinchGesture) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQPinchGesture_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QPinchGesture_virtualbase_metaObject".}
proc fcQPinchGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QPinchGesture_virtualbase_metacast".}
proc fcQPinchGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QPinchGesture_virtualbase_metacall".}
proc fcQPinchGesture_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QPinchGesture_virtualbase_event".}
proc fcQPinchGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QPinchGesture_virtualbase_eventFilter".}
proc fcQPinchGesture_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QPinchGesture_virtualbase_timerEvent".}
proc fcQPinchGesture_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QPinchGesture_virtualbase_childEvent".}
proc fcQPinchGesture_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QPinchGesture_virtualbase_customEvent".}
proc fcQPinchGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QPinchGesture_virtualbase_connectNotify".}
proc fcQPinchGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QPinchGesture_virtualbase_disconnectNotify".}
proc fcQPinchGesture_protectedbase_sender(self: pointer, ): pointer {.importc: "QPinchGesture_protectedbase_sender".}
proc fcQPinchGesture_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QPinchGesture_protectedbase_senderSignalIndex".}
proc fcQPinchGesture_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QPinchGesture_protectedbase_receivers".}
proc fcQPinchGesture_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QPinchGesture_protectedbase_isSignalConnected".}
proc fcQPinchGesture_new(vtbl: pointer, ): ptr cQPinchGesture {.importc: "QPinchGesture_new".}
proc fcQPinchGesture_new2(vtbl: pointer, parent: pointer): ptr cQPinchGesture {.importc: "QPinchGesture_new2".}
proc fcQPinchGesture_staticMetaObject(): pointer {.importc: "QPinchGesture_staticMetaObject".}
proc fcQSwipeGesture_metaObject(self: pointer, ): pointer {.importc: "QSwipeGesture_metaObject".}
proc fcQSwipeGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QSwipeGesture_metacast".}
proc fcQSwipeGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSwipeGesture_metacall".}
proc fcQSwipeGesture_tr(s: cstring): struct_miqt_string {.importc: "QSwipeGesture_tr".}
proc fcQSwipeGesture_horizontalDirection(self: pointer, ): cint {.importc: "QSwipeGesture_horizontalDirection".}
proc fcQSwipeGesture_verticalDirection(self: pointer, ): cint {.importc: "QSwipeGesture_verticalDirection".}
proc fcQSwipeGesture_swipeAngle(self: pointer, ): float64 {.importc: "QSwipeGesture_swipeAngle".}
proc fcQSwipeGesture_setSwipeAngle(self: pointer, value: float64): void {.importc: "QSwipeGesture_setSwipeAngle".}
proc fcQSwipeGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSwipeGesture_tr2".}
proc fcQSwipeGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSwipeGesture_tr3".}
type cQSwipeGestureVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQSwipeGestureVTable, self: ptr cQSwipeGesture) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQSwipeGesture_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QSwipeGesture_virtualbase_metaObject".}
proc fcQSwipeGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QSwipeGesture_virtualbase_metacast".}
proc fcQSwipeGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSwipeGesture_virtualbase_metacall".}
proc fcQSwipeGesture_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QSwipeGesture_virtualbase_event".}
proc fcQSwipeGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QSwipeGesture_virtualbase_eventFilter".}
proc fcQSwipeGesture_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QSwipeGesture_virtualbase_timerEvent".}
proc fcQSwipeGesture_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QSwipeGesture_virtualbase_childEvent".}
proc fcQSwipeGesture_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QSwipeGesture_virtualbase_customEvent".}
proc fcQSwipeGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QSwipeGesture_virtualbase_connectNotify".}
proc fcQSwipeGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QSwipeGesture_virtualbase_disconnectNotify".}
proc fcQSwipeGesture_protectedbase_sender(self: pointer, ): pointer {.importc: "QSwipeGesture_protectedbase_sender".}
proc fcQSwipeGesture_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QSwipeGesture_protectedbase_senderSignalIndex".}
proc fcQSwipeGesture_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QSwipeGesture_protectedbase_receivers".}
proc fcQSwipeGesture_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QSwipeGesture_protectedbase_isSignalConnected".}
proc fcQSwipeGesture_new(vtbl: pointer, ): ptr cQSwipeGesture {.importc: "QSwipeGesture_new".}
proc fcQSwipeGesture_new2(vtbl: pointer, parent: pointer): ptr cQSwipeGesture {.importc: "QSwipeGesture_new2".}
proc fcQSwipeGesture_staticMetaObject(): pointer {.importc: "QSwipeGesture_staticMetaObject".}
proc fcQTapGesture_metaObject(self: pointer, ): pointer {.importc: "QTapGesture_metaObject".}
proc fcQTapGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QTapGesture_metacast".}
proc fcQTapGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTapGesture_metacall".}
proc fcQTapGesture_tr(s: cstring): struct_miqt_string {.importc: "QTapGesture_tr".}
proc fcQTapGesture_position(self: pointer, ): pointer {.importc: "QTapGesture_position".}
proc fcQTapGesture_setPosition(self: pointer, pos: pointer): void {.importc: "QTapGesture_setPosition".}
proc fcQTapGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTapGesture_tr2".}
proc fcQTapGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTapGesture_tr3".}
type cQTapGestureVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQTapGestureVTable, self: ptr cQTapGesture) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQTapGesture_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QTapGesture_virtualbase_metaObject".}
proc fcQTapGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QTapGesture_virtualbase_metacast".}
proc fcQTapGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTapGesture_virtualbase_metacall".}
proc fcQTapGesture_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QTapGesture_virtualbase_event".}
proc fcQTapGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QTapGesture_virtualbase_eventFilter".}
proc fcQTapGesture_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QTapGesture_virtualbase_timerEvent".}
proc fcQTapGesture_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QTapGesture_virtualbase_childEvent".}
proc fcQTapGesture_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QTapGesture_virtualbase_customEvent".}
proc fcQTapGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QTapGesture_virtualbase_connectNotify".}
proc fcQTapGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QTapGesture_virtualbase_disconnectNotify".}
proc fcQTapGesture_protectedbase_sender(self: pointer, ): pointer {.importc: "QTapGesture_protectedbase_sender".}
proc fcQTapGesture_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTapGesture_protectedbase_senderSignalIndex".}
proc fcQTapGesture_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTapGesture_protectedbase_receivers".}
proc fcQTapGesture_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTapGesture_protectedbase_isSignalConnected".}
proc fcQTapGesture_new(vtbl: pointer, ): ptr cQTapGesture {.importc: "QTapGesture_new".}
